--- a/Android/HomeAgricultureMonitoringSystem/app/src/main/res/layout/activity_result.xml
+++ b/Android/HomeAgricultureMonitoringSystem/app/src/main/res/layout/activity_result.xml
@@ -1,9 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.page2.result.ResultActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:background="@color/grey"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/img_result"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            tools:src="@drawable/ic_home_black_24dp"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="@string/image_content"
+            android:layout_marginBottom="20dp"
+            />
+
+        <ProgressBar
+            android:id="@+id/progres_Bar"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+
+            android:id="@+id/sehat"
+            android:text="@string/sehat"
+            android:textSize="30dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <RelativeLayout
+            android:id="@+id/wadah_nama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/view_costum"
+            android:layout_marginBottom="20dp"
+
+            >
+
+
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/nama_penyakit"
+                android:text="Nama Penyakit : "
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="20dp"
+                />
+
+            <TextView
+                android:layout_marginTop="15dp"
+                android:id="@+id/penyakit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_toEndOf="@id/nama_penyakit"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+
+                />
+
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/wadah_penjelasan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/view_costum">
+
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/penjelasan"
+                android:text="Penjelasan         : "
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_marginStart="5dp"
+                />
+
+            <TextView
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/penjelasan_penyakit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_toEndOf="@id/penjelasan"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+
+                />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/wadah_solusi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/view_costum">
+
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/solusi"
+                android:text="Solusi                 : "
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_marginStart="5dp"
+                />
+
+            <TextView
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/solusi_penyakit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_toEndOf="@id/solusi"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+
+                />
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
+
+</ScrollView>
