add splash screen

--- a/Android/HomeAgricultureMonitoringSystem/app/src/main/res/layout/fragment_monitoring.xml
+++ b/Android/HomeAgricultureMonitoringSystem/app/src/main/res/layout/fragment_monitoring.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +20,7 @@
             android:textSize="25sp"
             android:background="?attr/colorPrimaryVariant"
 
-            android:text="HAMS" />
+            android:text="@string/hams" />
 
         <TextView
             android:layout_below="@id/title_app"
@@ -49,7 +48,7 @@
         <TextView
             android:layout_below="@+id/wave"
             android:id="@+id/text_garden"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
@@ -59,9 +58,21 @@
 
             android:text="@string/garden" />
 
+        <TextView
+            android:layout_below="@+id/text_garden"
+            android:id="@+id/server"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="monospace"
+            android:textSize="15sp"
+
+            android:text="Server : Off" />
+
 
         <RelativeLayout
-            android:layout_below="@+id/text_garden"
+            android:layout_below="@+id/server"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/view_costum"
@@ -78,7 +89,7 @@
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
-                android:text="Kelembapan Udara"
+                android:text="@string/kelembapan_udara"
                 android:textStyle="bold"
 
                 android:textColor="?attr/colorPrimary"
@@ -92,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/k_udara"
                 android:layout_marginTop="10dp"
-                android:text="100%"
+                android:text="@string/template_humidity"
                 android:textSize="35sp"
                 android:textColor="?attr/colorPrimary"
                 android:layout_marginHorizontal="5dp"
@@ -107,13 +118,12 @@
             <TextView
                 android:layout_marginStart="230dp"
                 android:id="@+id/k_tanah"
-                android:layout_marginLeft="30dp"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:textAlignment="center"
-                android:text="Kelembapan Tanah"
+                android:text="@string/kelembapan_tanah"
                 android:textStyle="bold"
                 android:textColor="?attr/colorPrimary"
 
@@ -127,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/k_tanah"
                 android:layout_marginTop="10dp"
-                android:text="100%"
+                android:text="@string/template_soil"
                 android:textSize="35sp"
 
                 android:layout_marginHorizontal="5dp"
@@ -144,7 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="180dp"
-                android:text="Suhu"
+                android:text="@string/suhu"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="?attr/colorPrimary"
@@ -159,7 +169,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/suhu"
                 android:layout_marginTop="10dp"
-                android:text="26,5°C"
+                android:text="@string/template_suhu"
                 android:textSize="35sp"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_vertical|center_horizontal"
@@ -187,7 +197,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pendingin Suhu"
+                android:text="@string/pompa_air"
                 android:textSize="20sp"
                 android:textColor="?attr/colorPrimary"
                 android:textStyle="bold"
@@ -226,7 +236,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Penerangan"
+                android:text="@string/penerangan"
                 android:textSize="20sp"
                 android:textColor="?attr/colorPrimary"
                 android:textStyle="bold"
