--- a/Android/HomeAgricultureMonitoringSystem/app/src/main/res/values-night/themes.xml
+++ b/Android/HomeAgricultureMonitoringSystem/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,17 @@
     <!-- Base application theme. -->
     <style name="Theme.HomeAgricultureMonitoringSystem" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/green_52734d</item>
-        <item name="colorPrimaryVariant">@color/green_ddffbc</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/green_639F4B</item>
+        <item name="colorPrimaryVariant">@color/green_91c788</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/green_feffde</item>
-        <item name="colorSecondaryVariant">@color/green_feffde</item>
+        <item name="colorSecondary">@color/black</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="fontFamily">serif</item>
+
         <!-- Customize your theme here. -->
     </style>
 </resources>
